Trying to fix <ul/> in blog posts so that bullets have consistent spacing.

--- a/_scss/bbg/_patch.scss
+++ b/_scss/bbg/_patch.scss
@@ -79,3 +79,13 @@ select {
 .usa-social-links a {
 	display: inline-block;
 }
+
+
+
+//Why are these set to table-rows? Causes weird spacings after the bullet.
+ul li,
+ol li {
+	&:before {
+		display: inline-block;
+	}
+}
